// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interval Middleware should handle START_INTERVAL action 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "args": Array [],
          "callback": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          },
          "interval": 3000,
          "intervalID": 2,
          "key": "SOME_KEY",
        },
        "type": "START_INTERVAL",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Interval Middleware should handle STOP_INTERVAL action 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "key": "SOME_KEY",
        },
        "type": "STOP_INTERVAL",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`Interval Middleware should pass action to next 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "args": Array [],
          "callback": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          },
          "interval": 3000,
          "intervalID": 11,
          "key": "SOME_KEY",
        },
        "type": "START_INTERVAL",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
